Fix scrollbar on home

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,10 +73,6 @@ nav a:hover {
   color: var(--hookers-green);
 }
 
-main {
-  overflow-y: auto;
-}
-
 article div {
   display: flex;
   align-items: center;
@@ -116,6 +112,10 @@ em {
   height: 100dvh;
   width: 50vw;
   background-color: var(--eerie-black);
+}
+
+.container-content:nth-child(1) {
+  overflow-y: auto;
 }
 
 .container-content > section {
